# SymptomTrajectories

./: README.md  environment.yml  pyproject.toml
artifacts/: AMHD_ a Temporal Symptom Trajectory Approach.pptx
config/: colab.yaml  default.yaml
data/data-build/: patients.csv
data/data-train/: pos_weights.json
data/datasets/: dx_uniques.csv
data/modeling/: splits.csv
data/processed/: patients.csv
data/raw/: conditions.csv  events.csv
data/raw-synthea/: daily.csv  encounters.csv
data/synthea/modules/phq9/: phq9.json
data/synthea_sample_ref_data_csv/: allergies.csv  careplans.csv  claims.csv  conditions.csv  devices.csv  encounters.csv  imaging_studies.csv  immunizations.csv  medications.csv  organizations.csv  patients.csv  payer_transitions.csv  payers.csv  procedures.csv  providers.csv  supplies.csv
src/: Build-Features.ipynb  Prepare-Data.ipynb
src/drive_ref/: model.ipynb  prepare-data.ipynb
src/symptom_trajectories/: __init__.py  cli.py  config.py  run.py
src/symptom_trajectories/build_datasets/: build_training.py  encoding.py  labels.py  splits.py
src/symptom_trajectories/build_features/: build.py  constants.py  daily.py  events.py  lifestyle.py  meds.py  observations.py  synthea.py
src/symptom_trajectories/models/: plotting.py  xgboost.py
